--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,14 +17,6 @@
 # http://www.powerfolder.com
 #
 
-
-general.friendlist=Friendlist
-
-
-findfriends.name=Find new Friends
-findfriends.key=F
-findfriends.description=Start searching for new friends
-
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
@@ -114,10 +106,10 @@ dialog.connect.connecting=Connecting
 dialog.connect.connecting_to=Connecting to {0}...
 dialog.connection_problem=Connection problem
 dialog.synchronization.choose=Please choose your sync action on
-dialog.synchronization.sychronizing=Synchronizing...
 dialog.synchronization.receive_changes=Receive changes
 dialog.synchronization.send_and_receive_changes=Publish and receive changes
 dialog.synchronization.send_own_changes=Publish own changes
+dialog.synchronization.sychronizing=Synchronizing...
 dialog.synchronization.title=Project synchronisation
 dialog.unable_to_connect_to_address=Unable to connect to {0}
 dialog.unable_to_connect_to_member=Unable to connect to {0}
@@ -200,6 +192,10 @@ filelist.status.no_files_available_add_files_and_invite=No files available... ad
 filelist.status.no_files_available_add_files_in_folder=No files available... Add files in you local folder to share them
 filelist.status.no_files_available_yet_fetching_filelist=No files available yet... fetching filelist
 
+findfriends.description=Start searching for new friends
+findfriends.key=F
+findfriends.name=Find new Friends
+
 folder.check_path_length.never_show_again=Do not ask this again
 folder.check_path_length.text=The combined length of the path to the file and the filename is more than 255 characters.\nThis is not recommended since this may not work on other Operating systems like Windows 2000.\n\nFolder\: {0}\nFile\: {1}
 folder.check_path_length.title=Path maybe to long
@@ -224,8 +220,8 @@ foldercreate.key=s
 foldercreate.name=New Folder
 foldercreate.nameempty.text=Name of folder should not be empty
 foldercreate.nameempty.title=Foldername required
-foldercreate.success=Folder {0} shared, local copy at '{1}'
 foldercreate.progress.text=Creating Folder '{0}'
+foldercreate.success=Folder {0} shared, local copy at '{1}'
 
 folderexception.dialog.text=Unable to join to join folder '{0}'.\nReason\: {1}
 folderexception.dialog.title=Problem with folder '{0}'
@@ -267,6 +263,7 @@ folderpanel.hometab.number_of_deleted_files_in_folder=Number of deleted files in
 folderpanel.hometab.number_of_local_files_in_folder=Number of local files in folder
 folderpanel.hometab.public_folder=Public
 folderpanel.hometab.secret_folder=Secret
+folderpanel.hometab.synchronisation_eta=Synchronisation ETA
 folderpanel.hometab.synchronisation_percentage=Synchronisation percentage
 folderpanel.hometab.title=Home
 folderpanel.hometab.total_number_of_files=Total number of files (local+deleted+available)
@@ -284,8 +281,8 @@ friendsearch.nodetable.last_seen_online=Last seen online
 friendsearch.nodetable.name=Name
 friendsearch.nodetable.on_local_network=On Lan
 
-friendspanel.currently_online=Currently online
 friendspanel.connected=Connected
+friendspanel.currently_online=Currently online
 friendspanel.n_a=n/a
 friendspanel.search_for_user=Search for user
 friendspanel.search_results=Search results
@@ -305,6 +302,7 @@ general.folder=Folder
 general.folder.public=Public (visible for all)
 general.folder.secret=Private (requires invitation)
 general.foldername=Name
+general.friendlist=Friendlist
 general.from=from
 general.hide=hide
 general.inet=i-net
@@ -455,9 +453,22 @@ openfile.description=Open (Run) selected file
 openfile.key=O
 openfile.name=Open file
 
+plugin_disable.description=Disable (and stop) Plugin
+plugin_disable.key=D
+plugin_disable.name=Disable
+
+plugin_enable.description=Enable (and start) Plugin
+plugin_enable.key=E
+plugin_enable.name=Enable
+
+pluginsettings.description=Open the settings for this plugin
+pluginsettings.key=S
+pluginsettings.name=Settings
+
 preferences.description=Opens the preferences
 preferences.dialog.advPort=Port
 preferences.dialog.advPort.tooltip=Enter a ","-separated list of ports PowerFolder should listen for connections
+preferences.dialog.advanced.title=Advanced
 preferences.dialog.autostartleechfiles=Autostart external P2P
 preferences.dialog.basedir=Basedir for folders
 preferences.dialog.basedir.title=Choose default base folder
@@ -467,8 +478,14 @@ preferences.dialog.bind.tooltip=Select the address PowerFolder should use
 preferences.dialog.bindDescr=Interface description
 preferences.dialog.colortheme=Color theme
 preferences.dialog.createdesktopshortcuts=Create desktop shortcuts
+preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
+preferences.dialog.dialogs.title=Dialogs
+preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
+preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
+preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
 preferences.dialog.dyndns=my (dynamic) DNS
 preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
+preferences.dialog.dyndns.title=DynDNS
 preferences.dialog.dyndnsCurrentIP=Current IP
 preferences.dialog.dyndnsHostname=Hostname
 preferences.dialog.dyndnsLoginPanel=Login
@@ -482,22 +499,45 @@ preferences.dialog.dyndnsUpdateUnknowError=DynDns service returned an unknown wa
 preferences.dialog.dyndnsUpdateWarning=DynDns service returned a warning\: 
 preferences.dialog.dyndnsUpdatedIP=Updated DynDns IP
 preferences.dialog.dyndnsUserName=Username
+preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.\nAre you sure you want to continue with it?
+preferences.dialog.dyndnsmanager.nomatch.title=The entered DynDns does not match to this host. 
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
+preferences.dialog.general.title=General
 preferences.dialog.language=Language
 preferences.dialog.lanlinesettings=LAN Connection speed
 preferences.dialog.linesettings=Internet Connection speed
+preferences.dialog.network.title=Network
+preferences.dialog.networkmode.lanonly=LAN only
+preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
+preferences.dialog.networkmode.private=Private Networking   
+preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so so the finding of your friends in the network is posible.</BODY></HTML>
+preferences.dialog.networkmode.public=Public Networking
+preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Enables public Folder sharing.<BR>Private folders will always require an Invitation, regardless of the networking mode.</BODY></HTML>
 preferences.dialog.nickname=Nickname
 preferences.dialog.nonwindowsinfo=Attention\: Some settings are only available on Windows systems
-
+preferences.dialog.plugin.classname=Java classname
+preferences.dialog.plugin.description=Description
+preferences.dialog.plugin.name=Name
+preferences.dialog.plugin.status=Status
+preferences.dialog.plugin.status_disabled=Disabled
+preferences.dialog.plugin.status_enabled=Enabled
+preferences.dialog.plugin.title=Plugin
 preferences.dialog.restarttext=Some changes require to restart PowerFolder.\nDo you want to restart now ?\n 
 preferences.dialog.restarttitle=Restart requested
+preferences.dialog.showadvanged=Show Advanged Preferences
+preferences.dialog.showpreviewpanel=Enable internal image preview
+preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
+preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
+preferences.dialog.silentthrottle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
 preferences.dialog.statusCantResolve=DynDns {0}\: cannot be resolved\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} validated successfully\!
 preferences.dialog.statusValidFailed=DynDns {0}\: validation Failed\!
 preferences.dialog.statusWaitDynDns=Please wait, DynDns {0} is beaing validated\!
 preferences.dialog.title=Preferences
 preferences.dialog.titleProcessing=processing...
+preferences.dialog.useziponlan=Use ZIP Compression on LAN 
+preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
 preferences.dialog.warnningMessage=Warning
 preferences.dialog.xbehavior=Exit behavior
 preferences.dialog.xbehavior.exit=Exit program
@@ -589,7 +629,7 @@ searchfriends.name=Search
 
 sendinvitation.ask_emailaddres.message=Email address to send invitation to
 sendinvitation.ask_emailaddres.title=Email address
-sendinvitation.body=Hello {0},<br><br>{1} invites you to the PowerFolder '{2}'<br>This invitation is used to access a private folder hosted by {1}.<br><br>1) To access the files you first need to download and install the free<br>software PowerFolder from<br>http://www.powerfolder.com.<br><br>2) After you have installed PowerFolder double-click the invitation<br>file attached to this email.<br><br>For more information or help installing or using PowerFolder please<br>visit our Documentation Resources at http://docs.powerfolder.com<br><br>Thank You,<br>The PowerFolder Development Team<br>PowerFolder, Professional Folder Sharing<br>
+sendinvitation.body=Hello {0},<br><br>{1} invites you to the PowerFolder '{2}'<br>This invitation is used to access a private folder hosted by {1}.<br><br>1) To access the files you first need to download and install the free<br>software PowerFolder from<br>http\://www.powerfolder.com.<br><br>2) After you have installed PowerFolder double-click the invitation<br>file attached to this email.<br><br>For more information or help installing or using PowerFolder please<br>visit our Documentation Resources at http\://docs.powerfolder.com<br><br>Thank You,<br>The PowerFolder Development Team<br>PowerFolder, Professional Folder Sharing<br>
 sendinvitation.description=Invites a user to a folder
 sendinvitation.email=To email...
 sendinvitation.example_emailaddress=email@domain.com
@@ -650,13 +690,12 @@ systray.tooltip.insync=InSync
 systray.tooltip.syncing=Syncing
 systray.tooltip.up=UP {0} KBs
 
+title.friends=Friends
 title.my.folders=My Folders 
 title.network.statistics=Network Statistics
 title.public.folder=Public Folder
 title.public.folders=Public Folders
 title.search.users=Find Friends
-
-
 
 transfers.completed=completed
 transfers.eta=ETA
@@ -679,6 +718,7 @@ webservice_request_folder_leave.key=q
 webservice_request_folder_leave.name=Quit WebStore
 
 wizard.basicsetup.enternick=Please enter your nickname
+wizard.basicsetup.lanonly=LAN only
 wizard.basicsetup.networking=Networking Mode
 wizard.basicsetup.private=Private/Closed Group
 wizard.basicsetup.public=Public Networking
@@ -743,56 +783,3 @@ wizard.whattodo.openonlinedocumentation=Open Online Documentation
 wizard.whattodo.projectwork=Synchronize Project
 wizard.whattodo.syncpcs=Synchronize PCs
 wizard.whattodo.title=What do you want to do ?
-
-preferences.dialog.plugin.title=Plugin
-preferences.dialog.plugin.name=Name
-preferences.dialog.plugin.description=Description
-preferences.dialog.plugin.classname=Java classname
-
-pluginsettings.description=Open the settings for this plugin
-pluginsettings.key=S
-pluginsettings.name=Settings
-
-folderpanel.hometab.synchronisation_eta=Synchronisation ETA
-plugin_enable.name=Enable
-plugin_enable.key=E
-plugin_enable.description=Enable (and start) Plugin
-
-plugin_disable.name=Disable
-plugin_disable.key=D
-plugin_disable.description=Disable (and stop) Plugin
-preferences.dialog.plugin.status=Status
-preferences.dialog.plugin.status_enabled=Enabled
-preferences.dialog.plugin.status_disabled=Disabled
-
-title.friends=Friends
-
-preferences.dialog.network.title=Network
-preferences.dialog.advanced.title=Advanced
-preferences.dialog.dyndns.title=DynDNS
-preferences.dialog.general.title=General
-preferences.dialog.showadvanged=Show Advanged Preferences
-preferences.dialog.showpreviewpanel=Enable internal image preview
-preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
-
-preferences.dialog.networkmode.private=Private Networking   
-preferences.dialog.networkmode.public=Public Networking
-preferences.dialog.networkmode.lanonly=LAN only
-preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so so the finding of your friends in the network is posible.</BODY></HTML>
-preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Enables public Folder sharing.<BR>Private folders will always require an Invitation, regardless of the networking mode.</BODY></HTML>
-preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
-wizard.basicsetup.lanonly=LAN only
-
-preferences.dialog.dialogs.title=Dialogs
-preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
-preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
-preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
-preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
-
-preferences.dialog.useziponlan=Use ZIP Compression on LAN 
-preferences.dialog.dyndnsmanager.nomatch.title=The entered DynDns does not match to this host. 
-preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.\nAre you sure you want to continue with it?
-
-preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
-preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
-preferences.dialog.silentthrottle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
