now uses random port!

--- a/src/test-resources/ControllerBart.config
+++ b/src/test-resources/ControllerBart.config
@@ -4,7 +4,7 @@ nodeid=randomstringBart
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
 nick=Bart
-port=45678
+random-port=true
 verbose=true
 disableui=true
 publicnetworking=false
