--- a/src/test-resources/ControllerLisa.config
+++ b/src/test-resources/ControllerLisa.config
@@ -4,7 +4,7 @@ nodeid=randomstringLisa
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
 nick=Lisa
-port=56789
+random-port=true
 disableui=true
 publicnetworking=false
 uploadlimit=0
