* Changed dyndns update on start to autoupdate (I'd say 80% done ;)  ) * Changed loading and saving of nodes in NodeManager to use "NodeList" class * Included saving and loading of node list backups Maybe some other things I forgot sicne it's 4 a.m. and I'm still awake arghh

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -493,7 +493,6 @@ preferences.dialog.dyndnsPassword=Password
 preferences.dialog.dyndnsSettingsTabbedPane=DynDns Settings
 preferences.dialog.dyndnsUpdateButton=Force Update
 preferences.dialog.dyndnsUpdateError=DynDns service returned an error\: 
-preferences.dialog.dyndnsUpdateOnStart=Update on start
 preferences.dialog.dyndnsUpdateTitle=DynDns Updater
 preferences.dialog.dyndnsUpdateUnknowError=DynDns service returned an unknown warning.
 preferences.dialog.dyndnsUpdateWarning=DynDns service returned a warning\: 
@@ -783,3 +782,7 @@ wizard.whattodo.openonlinedocumentation=Open Online Documentation
 wizard.whattodo.projectwork=Synchronize Project
 wizard.whattodo.syncpcs=Synchronize PCs
 wizard.whattodo.title=What do you want to do ?
+
+# Removed
+# preferences.dialog.dyndnsUpdateOnStart=Update on start
+preferences.dialog.dyndnsAutoUpdate=Keep dyndns up-to-date
