#174 overwrite to recycle bin and restore overwrite confirmation

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -786,3 +786,8 @@ wizard.whattodo.title=What do you want to do ?
 # Removed
 # preferences.dialog.dyndnsUpdateOnStart=Update on start
 preferences.dialog.dyndnsAutoUpdate=Keep dyndns up-to-date
+recyclebin.confirmation.overwrite.on.restore.title=Restore file, overwrite?
+recyclebin.confirmation.overwrite.on.restore.overwrite.filename=Overwrite {0}?
+recyclebin.confirmation.overwrite.on.restore.changed.date=Changed {0}
+recyclebin.confirmation.overwrite.on.restore.size.bytes=Size {0}
+recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=With file from recycle bin?
