--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -24,6 +24,7 @@ abortcopy.name=Abort
 abortdownload.description=Aborts the selected downloads and removed them from the download queue
 abortdownload.key=a
 abortdownload.name=Abort
+test
 
 aborttransfer.description=Aborts the selected transfer
 aborttransfer.key=a
