Added debug output for LAN only mode (Test for ticket #303) Fixed spelling "advanged" to "advanced" (Found a looot of them)

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -524,7 +524,6 @@ preferences.dialog.plugin.status_enabled=Enabled
 preferences.dialog.plugin.title=Plugin
 preferences.dialog.restarttext=Some changes require to restart PowerFolder.\nDo you want to restart now ?\n 
 preferences.dialog.restarttitle=Restart requested
-preferences.dialog.showadvanged=Show Advanged Preferences
 preferences.dialog.showpreviewpanel=Enable internal image preview
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
 preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
@@ -791,3 +790,4 @@ recyclebin.confirmation.overwrite.on.restore.overwrite.filename=Overwrite {0}?
 recyclebin.confirmation.overwrite.on.restore.changed.date=Changed {0}
 recyclebin.confirmation.overwrite.on.restore.size.bytes=Size {0}
 recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=With file from recycle bin?
+preferences.dialog.showadvanced=Show Advanced Preferences
