progress dialog added on deleting files from recyclebin

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -147,6 +147,9 @@ empty_recycle_bin.description=Empty the PowerFolder Recycle Bin
 empty_recycle_bin.key=E
 empty_recycle_bin.name=Empty Recycle Bin
 
+empty_recycle_bin.working.title=Emptying the Recycle Bin
+empty_recycle_bin.working.description=Deleting files
+
 empty_recycle_bin_confimation.text=Are your sure to want to empty the PowerFolder Recycle Bin?
 empty_recycle_bin_confimation.title=Empty PowerFolder Recycle Bin
 
